# trm-pathplanning

./: .gitignore  README.md  main.py  pretrain.py  pyproject.toml  results.md
configs/: ablation_n1.yaml  ablation_n12.yaml  ablation_n3.yaml  ablation_no_deepsup.yaml  base.yaml  cnn_baseline.yaml  cnn_deep.yaml  cnn_shallow.yaml  sanity.yaml  trm_1m.yaml
dataset/: __init__.py  astar.py  build_dataset.py  loader.py  solver.py
models/: __init__.py  attention.py  cnn_baseline.py  embeddings.py  layers.py  trm.py
scripts/: __init__.py  benchmark_latency.py  compare_baselines.py  eval_ood.py  eval_viz.py  plot_metrics.py
utils/: __init__.py  ema.py  logging.py  metrics.py  rerun_viz.py
