[project]
name = "trm-pathplanning"
version = "0.1.0"
description = "Tiny Recursive Model for 2D occupancy-grid path planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cst-lsp>=0.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "rerun-sdk>=0.32.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]
